
6.55  2016-03-07

6.54  2016-03-06
  - Deprecated Mojo::Template::build and Mojo::Template::compile.
  - Deprecated Mojo::Template::interpret in favor of Mojo::Template::process.
  - Added support for named variables to Mojo::Template.
  - Added vars attribute to Mojo::Template.
  - Added process method to Mojo::Template.
  - Improved Mojo::Template performance slightly.

6.53  2016-03-03
  - Removed multi_accept setting from Hypnotoad.
  - Removed -M options from daemon and prefork commands.
  - Deprecated Mojo::IOLoop::multi_accept.
  - Deprecated Mojo::IOLoop::Server::multi_accept.
  - Deprecated Mojo::Server::Daemon::multi_accept.
  - Added single_accept option to Mojo::IOLoop::Server::listen.
  - Added single_accept parameter to Mojo::Server::Daemon::listen.
  - Increased default max_requests from 25 to 100 in Mojo::Server::Daemon.
  - Increased default accepts from 1000 to 10000 in Mojo::Server::Prefork.
  - Improved performance of many Mojo::Util functions slightly.
  - Fixed default value bug in val method of Mojo::DOM.

6.52  2016-03-02
  - Added is_accepting method to Mojo::IOLoop::Server.
  - Added -M option to daemon command.
  - Improved responsiveness of stop_gracefully method in Mojo::IOLoop.
  - Fixed bug in Mojo::IOLoop where too many connections could be accepted.
  - Fixed a few concurrency bugs in Mojo::IOLoop.

6.51  2016-02-29
  - Fixed bug in Mojolicious::Plugin::EPLRenderer where empty templates from the
    DATA section would be ignored.
  - Fixed a few "0" value bugs in Mojolicious::Renderer.

6.50  2016-02-27
  - Added throw method to Mojo::Exception.

6.49  2016-02-26
  - Removed throw method from Mojo::Exception.
  - Added inspect method to Mojo::Exception.
  - Improved check_box and radio_button helpers with support for "on" default
    values.
  - Improved val method in Mojo::DOM with support for "on" default values.
  - Fixed url_for bug where routes with custom names would not match in the same